--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.1.3 2013-06-30
+
+* wrap the return value of chat message with Skype::Chat::Message
+* add tests
+
 === 0.1.2 2013-06-29
 
 * bugfix Chat API wrapper
