--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.1.4 2013-06-30
+
+* bugfix of chat wrapper
+* update chat sample
+
 === 0.1.3 2013-06-30
 
 * wrap the return value of chat message with Skype::Chat::Message
