--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.2.2 2013-07-03
+
+* get properties of Skype::Chat::Message on access
+
 === 0.2.1 2013-06-30
 
 * add function Skype::Call#talking?
