--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.2.8 2013-08-03
+
+* Fix recentchats regex to match all chats  #16
+  * thank you for contributing @chrisbolt
+
 === 0.2.7 2013-08-03
 
 * add samples/chat_list.rb
